# portainer-updater

./: Cargo.toml  README.md  env.sample
src/: llm_search.rs  main.rs  ntfy_reporter.rs  telegram_reporter.rs  version_fetcher.rs  web_server.rs
