[package]
name = "webhook_updater"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
cron = "0.6"
chrono = "0.4"
anyhow = "1.0"
log = "0.4"
env_logger = "0.9"
semver = "1.0"