[package]
name = "webhook_updater"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.39.3", features = ["full"] }
tokio-postgres = "0.7.11"
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
dotenv = "0.15"
cron = "0.12.1"
chrono = "0.4"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11.5"
semver = "1.0.23"